k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ensa-investor-prod
  labels:
    name: ensa-investor-prod
