k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ensa-investor-service
  namespace: ensa-investor-prod
spec:
  selector:
    app: ensa-investor-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
