k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ensa-investor-ingress
  namespace: ensa-investor-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.investidor.ensa.co.ao
      secretName: ensa-tls-secret
  rules:
    - host: api.investidor.ensa.co.ao
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ensa-investor-service
                port:
                  number: 80
